crates/oopsie/tests/snapshots/erased__format_short_with_help_stable_aarch64-apple-darwin.snap
---
source: crates/oopsie/tests/erased.rs
expression: short
---
erased::ErrorWithHelp

  × Something went wrong: connection refused
  at crates/oopsie/tests/erased.rs:[LOC]
  help: Try restarting the service
